package com.eliten.eksamen.media;

public enum MediaType {

    MOVIE,
    SERIES
}
