@startuml

title __MEDIA's Class Diagram__\n

  namespace com.eliten.eksamen {
    namespace media {
      enum Genre {
        ACTION
        ADVENTURE
        ANIMATION
        BIOGRAPHY
        COMEDY
        CRIME
        DOCUMENTARY
        DRAMA
        FAMILY
        FANTASY
        FILMNOIR
        HISTORY
        HORROR
        MUSIC
        MUSICAL
        MYSTERY
        ROMANCE
        SCIFI
        SPORT
        TALKSHOW
        THRILLER
        WAR
        WESTERN
        description
        name
      }
    }
  }
  

  namespace com.eliten.eksamen {
    namespace media {
      class com.eliten.eksamen.media.Media {
          - genres : ArrayList<Genre>
          - image : ImageIcon
          - isForKids : boolean
          - name : String
          - releaseYear : int
          - score : double
          + Media()
          + addGenre()
          + getGenres()
          + getGenresString()
          + getImage()
          + getName()
          + getReleaseYear()
          + getScore()
          + getType()
          + isForKids()
          + isMovie()
          + setImage()
          + setIsForKids()
          + watch()
      }
    }
  }
  

  namespace com.eliten.eksamen {
    namespace media {
      enum MediaType {
        MOVIE
        SERIES
      }
    }
  }
  

  namespace com.eliten.eksamen {
    namespace media {
      class com.eliten.eksamen.media.Series {
          - endYear : int
          - seasons : LinkedList<Integer>
          + Series()
          + addSeason()
          + getEndYear()
          + getEpisodeAmount()
          + getSeasons()
      }
    }
  }
  

  com.eliten.eksamen.media.Media o-- com.eliten.eksamen.media.MediaType : type
  com.eliten.eksamen.media.Series -up-|> com.eliten.eksamen.media.Media


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
